# my-study-rust

./: Cargo.toml
game-of-life/: Cargo.toml  README.md  build.sh  run.sh
game-of-life/src/: lib.rs  utils.rs
game-of-life/www/: index.html  package.json
hello-world/src/: main.rs
mars-calc/: Cargo.toml
mars-calc/src/: main.rs
